--- a/css/styles.css
+++ b/css/styles.css
@@ -3,3 +3,50 @@
 }*/
 
 /* Comment goes here */
+#computers {
+	font-family: Arial;
+	margin: 100px 0;
+	border: 1px solid #333333;
+	border-collapse: collapse;
+	/* min-width: 800px */
+}
+
+#computers caption {
+	font-size: 24px;
+	margin-bottom: 15px;
+}
+
+#computers th {
+	background-color: #3498db;
+	color: white;
+	padding: 5px 10px;
+	border: 1px solid #2980b9;
+}
+
+#computers td:first-child {
+	font-weight: bold;
+}
+
+#computers tr:nth-child(2n) {
+	background-color: #dddddd;
+}
+
+#computers td {
+	padding: 10px;
+}
+
+#computers tr:hover {
+	background-color: blue;
+	color: white;
+}
+
+#cpu-pro,
+#cpu-standard {
+	width: 80px;
+}
+
+#computers td:nth-child(3),
+#computers td:nth-child(4) {
+	text-align: center;
+}
+
